<resources>
    <string name="app_name">m_easyBUY</string>
    <string name="login_button">login</string>
    <string name="register_button">register</string>
    <string name="logout_button">log out</string>
    <string name="welcome">Welcome.</string>
    <string name="email">email-id</string>
    <string name="password">password</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="have_account_login">Already have an account? Login</string>
    <string name="username">username</string>
    <string name="post_ad">Post Ad</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="findAd">Find Ad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
