<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.05" />

    <ImageView
        android:id="@+id/rect"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.3"
        app:srcCompat="@drawable/rect"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bt_login"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="@+id/rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rect"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bt_reg"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/mecImage"
        android:layout_width="628dp"
        android:layout_height="473dp"
        android:layout_marginLeft="40dp"
        android:tint="#F2000000"
        app:layout_constraintBottom_toTopOf="@id/welcomeText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        app:srcCompat="@drawable/meclogo" />


</androidx.constraintlayout.widget.ConstraintLayout>
